# Quran-Ai-Agent

./: README.md  app.py  pyproject.toml  requirements.txt  telex_workflow.json  workflow.json
quran_mood_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
