[project]
name = "quran-mood-agent"
version = "0.1.0"
description = "An A2A Quran Mood Agent built with Python and FastAPI"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "google-generativeai==0.7.0",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
]
requires-python = ">=3.10"
license = "MIT"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
